<resources>
    <string name="app_name">Marketplace</string>
    <string name="text1">Correo electronico o Usuario</string>
    <string name="Etext1">Ingrese su Correo/Usuario</string>
    <string name="text2">Contraseña</string>
    <string name="Etext2">Ingrese su Contraseña</string>
    <string name="check">Ver Contraseña</string>
    <string name="text3">Olvido su Contraseña</string>
    <string name="boton1">Aceptar Politica</string>
    <string name="boton2">Ingresar</string>
    <string name="nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Telefono">Telefono</string>
    <string name="Correo">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="msj2">datos incorrectos</string>
    <string name="apertura">Apertura</string>
    <string name="cierre">Cierre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="politica">Estos términos y condiciones de privacidad de datos, uso de cookies
        y spam establecen los lineamientos y prácticas de protección de datos personales, uso de
        cookies y spam del sitio web de la Corporación Andina de Fomento ("CAF", o "nosotros")
        generalmente indicadas por la URL "www.caf.com" y sus dominios de nivel inferior
        (el "sitio web" o la ¨página web”).
        CAF es un banco de desarrollo establecido por sus países miembros de conformidad con su
        Convenio Constitutivo. Para obtener más información sobre CAF, el sitio web y sus operaciones
        puede referirse a los apartados de “Quiénes somos”, “Qué hacemos” o “Contacto” para apoyo a sus
        consultas.
        Lea atentamente estos términos y condiciones, ya que le ayudarán a tomar decisiones informadas
        sobre cómo compartir su información personal con nosotros. Aunque estos términos y condiciones
        se aplican solo a la información recopilada a través del sitio web, son coherentes con nuestras
        políticas y prácticas con respecto a la información personal que recibimos.</string>
</resources>